full-stack_chatApp/k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chat-app

spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
      name: backend-pod
    spec:
      containers:
      - name: chatapp-backend 
        image: promise779/chatapp-backend:latest
        ports:
          - containerPort: 5001
