full-stack_chatApp/k8s/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployment
  namespace: chat-app

spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
      name: mongodb-pod
    spec:
      containers:
      - name: chatapp-mongodb
        image: mongo:latest
        ports:
          - containerPort: 27017
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
