full-stack_chatApp/k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service # This name will be used in your backend connection string
  namespace: chat-app
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # Default MongoDB port
      targetPort: 27017 # Matches the containerPort in your MongoDB deployment
